# loraine

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_template.txt  Makefile  README.md  build_loraine.yml
.github/workflows/: build_cmake.yml  build_lib.yml  build_loraine.yml
cmake/: Conan.cmake
github/: build_loraine.yml
local-ci/: build_loraine.yml
loraine/: CMakeLists.txt
loraine/app/: exec.cpp  makeitraine.cpp
loraine/cppsrc/: action.cpp  action_handler.cpp  action_invoker.cpp  action_mode.cpp  action_system.cpp  action_sytem.cpp  all_events.cpp  board.cpp  board_system.cpp  card.cpp  card_defs.cpp  card_filters.cpp  cardbase.cpp  carddefs.cpp  cardfactory.cpp  concrete_effects.cpp  config.cpp  deck.cpp  dummy.cpp  effect.cpp  effect_system.cpp  effectmap.cpp  entity.cpp  event.cpp  event_bus.cpp  event_listener.cpp  event_register.cpp  event_types.cpp  fieldcard.cpp  gallery.cpp  game.cpp  gamedefs.cpp  gamemode.cpp  gamestate.cpp  grant.cpp  grantmodifier.cpp  input_system.cpp  keywords.cpp  landmark.cpp  logic.cpp  (+17 more)
loraine/include/: action.h  agent.h  algorithms.h  all.h  board.h  card.h  card_filters.h  controller.h  deck.h  event.h  event_listener.h  event_register.h  factory.h  game.h  gamemode.h  keywords.h  logic.h  player.h  random.h  region.h  rng.h  rng_machine.h  rulesets.h  state.h  target.h  targeter.h  targeting.h  types.h  utils.h  uuid_gen.h
loraine/include/cards/: algorithms.h  card.h  card_defs.h  card_filters.h  cardfactory.h  common_effects.h  context_card.h  effect.h  filter.h  gallery.h  grant.h  grants.h  keywords.h  specific_effects.h  target.cpp  target.h  toll.h  tribute.h
loraine/include/cards/card_types/: all_card_types.h  card.h  landmark.h  spell.h  unit.h
loraine/include/cards/gallery/: specific_effects.h
loraine/include/cards/types/: cardbase.h  fieldcard.h  landmark.h  spell.h  trap.h  unit.h
loraine/include/core/: action.h  action_handler.h  action_invoker.h  board.h  config.h  deck.h  entity.h  gamedefs.h  gamemode.h  gamestate.h  logic.h  nexus.h  player.h  record.h  state.h  targetable.h  targeting.h
loraine/include/effects/: concrete_effects.h  effect.h  effectmap.h  helpers.h
loraine/include/engine/: action.h  action_mode.h  board.h  config.h  deck.h  logic.h  nexus.h  player.h  player_state.cpp  rulesets.h  state.h
loraine/include/event/: active_event.h  event.h  event_listener.h  event_types.h
loraine/include/events/: construction.h  event.h  event_bus.h  event_labels.h  event_listener.h  event_subscriber.h  event_types.h  eventbase.h  helpers.h
loraine/include/events/lor_events/: all_events.h  construction.h  event_types.h
loraine/include/filters/: filter.h
loraine/include/grants/: grant.h  grantmodifier.h
loraine/include/loraine/: controller.h  loraine.h
loraine/include/loraine/cards/: card.h  carddefs.h  components.h  toll.h
loraine/include/loraine/cards/gallery/: specific_effects.h
loraine/include/loraine/cards/types/: cardbase.h  trap.h
loraine/include/loraine/core/: action.h  action.hpp  action_invoker.h  board.h  carddefs.h  components.h  components.hpp  config.h  config.hpp  deck.h  deck.hpp  entity.h  gamedefs.h  gamemode.h  gamestate.h  hand.h  logic.h  nexus.h  player.h  schedule.h  systems.h  systems_fwd.hpp  targeting.h  yard.hpp
loraine/include/loraine/core/components/: ability.hpp  card_attributes.h  card_attributes.hpp  condition.h  condition.hpp  controller.hpp  keywordmap.h  keywordmap.hpp  mana_resource.h  mana_resource.hpp  play_condition.hpp  position.h  position.hpp  reputation.h  reputation.hpp  stat_health.h  stat_health.hpp  stat_mana.h  stat_mana.hpp  stat_power.h  stat_power.hpp  tags.h  tags.hpp  targeter.hpp
loraine/include/loraine/core/factories/: cards.h
loraine/include/loraine/core/systems/: action_system.h  action_sytem.h  board_system.h  board_system.hpp  effect_system.hpp  input_system.h  input_system.hpp  keyword_system.hpp  play_system.hpp  position_system.hpp  reputation_system.hpp  stat_health_system.hpp  stat_mana_system.hpp  stat_power_system.hpp  system.h  system.hpp  target_system.hpp
loraine/include/loraine/effects/: effect.h  effectdefs.h  effectdefs.hpp  effectmap.h
loraine/include/loraine/events/: construction.h  event.h  event_bus.h  event_id.h  event_labels.h  event_listener.h  event_subscriber.h  event_types.h  helpers.h
loraine/include/loraine/grants/: grant.h  grantfactory.h  grantmodifier.h
loraine/include/loraine/utils/: algorithms.h  random.h  types.h  utils.h
loraine/include/utils/: algorithms.h  types.h  utils.h  uuid.h
meta/: card_analyzer.py  download.py
test/: CMakeLists.txt  dummy.cpp  test_action.cpp  test_action.h  test_board.cpp  test_cards.cpp  test_cards.h  test_deck.cpp  test_deck.h  test_logic.cpp  test_logic.h
